--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "page",
+  "name": "nature",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "scrolltrigger": "^1.0.1",
+    "sheryjs": "^1.0.0-beta.0.1.7",
+    "three": "^0.159.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
